# expenditure_data_project

./: README.md  data.py  pyproject.toml
public/: Exp.xlsx
