[tool.poetry]
name = "expenditure-data-project"
version = "0.1.0"
description = ""
authors = ["andrew <andrew.bashorum@telenostic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
xlrd = "^2.0.1"
dash = "^2.18.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
